--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
 @import '~antd/dist/antd.css';
 
+
+:root {
+  --primary-light: #8abdff;
+  --primary: #6d5dfc;
+  --primary-dark: #5b0eeb;
+  --white: #ffffff;
+  --greyLight-1: #e4ebf5;
+  --greyLight-2: #c8d0e7;
+  --greyLight-3: #bec8e4;
+  --greyDark: #9baacf;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,6 +24,7 @@ body {
 
   padding: 20px;
   margin: 0 auto;
+  background-color: #e4ebf5;
 
 }
 
